--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <video autoplay loop muted>
+		<source src="/css/assets/IMG_0472.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
 <header>
     <h3 id="logo">
         <a href="index.html">FREE WORLD RECORDS</a>
