--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
 </header>
 <video autoplay loop muted>
-    <source src="/css/assets/IMG_0472.mp4" type="video/mp4">
+    <source src="/css/assets/IMG_0472.mp4" type="video/mp4" class="back-video">
 </video>
 <main>
     <!--<header class="main__hero">
