--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <video autoplay loop muted>
+    <video autoplay loop muted playsinline>
         <source src="css/assets/IMG_0472.mp4" type="video/mp4" class="back-video">
     </video>
 <header>
