--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <video autoplay loop muted playsinline>
         <source src="css/assets/IMG_0472.mp4" type="video/mp4" class="back-video">
+        <source src="css/assets/lowqg.ogg" type="video/ogg" class="back-video">
+        <source src="css/assets/lowqua.webm" type="video/webm" class="back-video">
     </video>
 <header>
     <h3 id="logo">
