--- a/free.html
+++ b/free.html
@@ -15,7 +15,7 @@
     </video>
 <header>
     <h3 id="logo">
-        <a href="index.html">FREE WORLD RECORDS</a>
+        <a href="free.html">FREE NOBD</a>
     </h3>
     <nav class="navbar__menu">
         <label for="toggle" id="burger">
@@ -27,9 +27,10 @@
         </label>
         <!--<input type="checkbox" id="toggle">-->
         <ul id="navbar__list">
-            <li><a href="free.html">FREE</a></li>
+            <li><a href="free-blog.html">BLOG</a></li>
             <li><a href="free-merch.html">SHOP</a></li>
             <li><a href="reel.html">REELS</a></li>
+            <li><a href="index.html">FREE WORLD RECORDS</a></li>
         </ul>
         </nav>
 </header>
