--- a/reel.html
+++ b/reel.html
@@ -31,6 +31,8 @@
  <div class="carousel">
     <div class="slide-container">
         <iframe class="slide" src="https://www.youtube.com/embed/9fxeaPueb18" title="This is FREE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="320" height="568" src="https://www.youtube.com/embed/Fy-vdYg2bTY" title="DAY 29 TRAINING SESSION #absoul #kendricklamartypebeat #soundcloudpromotion #nolabel #musicmarketing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="320" height="568" src="https://www.youtube.com/embed/tEOZvfrBP40" title="DAY 30 BREAKDANCING-#9thwonder #oldschoolhiphop #millenialmoney #applemusic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
         <button class="prev-slide">&#10094;</button>
         <button class="next-slide">&#10095;</button>
