--- a/free.html
+++ b/free.html
@@ -27,7 +27,7 @@
         </label>
         <!--<input type="checkbox" id="toggle">-->
         <ul id="navbar__list">
-            <li><a href="free-blog.html">BLOG</a></li>
+            <!--<li><a href="free-blog.html">BLOG</a></li>-->
             <li><a href="free-merch.html">SHOP</a></li>
             <li><a href="reel.html">REELS</a></li>
             <li><a href="index.html">FREE WORLD RECORDS</a></li>
